# cv-fry

./: .gitignore  Cargo.toml  README.md  build.rs  makefile  netview.ys
.cargo/: config.toml
cpp/: Cargo.toml  build.rs
cpp/src/: alu.cpp  alu.rs  core.cpp  core.rs  ifu.cpp  ifu.rs  jbu.cpp  jbu.rs  lib.rs  lsu.cpp  lsu.rs  pc.cpp  pc.rs
payload/: Cargo.toml  build.rs  linker.ld
payload/c/: stresstest.c
payload/rust/: Cargo.toml  rust-toolchain.toml
payload/rust/.cargo/: config.toml
payload/rust/src/: keyboard.rs  main.rs  vga.rs
payload/src/: lib.rs
programs/rust/: Cargo.toml  rust-toolchain.toml
programs/rust/.cargo/: config.toml
programs/rust/src/: main.rs
proptest-regressions/alu/: alu.txt
proptest-regressions/jbu/: mod.txt
sim/: Cargo.toml  build.rs
sim/core/: core.sav  main.rs  test.rs  vcore.rs  vga.rs
sim/proptest-regressions/: alu.txt  jbu.txt
sim/src/: alu.rs  core.rs  ifu.rs  jbu.rs  lib.rs  lsu.rs  pc.rs
sim/src/bus/: c2c_data.rs  c2c_instr.rs  mod.rs
sim/src/core/: mod.rs
sim/src/ifu/: mod.rs
sim/src/lsu/: mod.rs
sim/src/utils/: c2c_r.rs  c2c_w.rs  dut.rs  mod.rs
src/bus/: c2c_r.sv  c2c_w.sv
src/processor/core/: core.sv
sv/: Cargo.toml  build.rs
sv/src/: lib.rs
sv/src/bus/: c2c_data.sv  (+3 more)
test/: build.rs  lib.rs
test/alu/: alu.rs  mod.rs
test/core/: core.cpp  core_shim.sv  mod.rs
test/ifu/: ifu.cpp  ifu_shim.sv  mod.rs
test/jbu/: mod.rs
test/lsu/: lsu_shim.sv
test/pc/: mod.rs  pc.cpp  pc.rs
test/sav/: pc.sav  pc.vcd
test/utils/: c2c_r.rs  c2c_w.rs  dut.rs  mod.rs
yosys/: netview.tcl
(+27 files in other folders)
