[package]
name = "cv-fry-sim"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cv-fry-cpp = { path = "../cpp" }
cv-fry-payload = { path = "../payload"}
sdl2 = { version = "0.38.0", features = ["image"] }


[dev-dependencies]
proptest = "1.10.0"

[build-dependencies]
toml = "0.9.12"

